@@ -347,6 +347,11 @@ New Features
     {"delete":{"id":"myid", "_version_":123456789}}
   (yonik)
 
+* SOLR-3211:  Allow parameter overrides in conjunction with "spellcheck.maxCollationTries".
+  To do so, use parameters starting with "spellcheck.collateParam."  For instance, to
+  override the "mm" parameter, specify "spellcheck.collateParam.mm".  This is helpful
+  in cases where testing spellcheck collations for result counts should use different
+  parameters from the main query (James Dyer)
 
 Optimizations
 ----------------------
